--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer pagina</title>
+    <style>
+        /*Text decoration quita la linea de abajo */
+        /*Padding es para separar con pixeles a los lados */
+        *{
+            padding: 0;
+            margin: 0;
+        }
+        body{
+            background-color: grey;
+        }
+        a{
+            text-decoration: none; 
+            background-color: darkgreen;
+            padding: 10px 20px;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <table>
